<resources>
    <string name="app_name">t0805_save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="assets_triangle">&#xe665;</string>
    <string name="sign_on">SIGN ON</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="regist_in">REGIST IN</string>
    <string name="login">LOGIN</string>
    <string name="age">age</string>
    <string name="sex">sex</string>
    <string name="to_regist">没有账号?前去注册</string>
</resources>
