<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--username-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/register_et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:padding="10dp" />

        </android.support.design.widget.TextInputLayout>

        <!--password-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/register_et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password" />

        </android.support.design.widget.TextInputLayout>

        <!--age-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/register_et_age"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/age"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <!--sex-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/registerer_et_sex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sex" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/regist_in" />

    </LinearLayout>
</ScrollView>